css/screen_new.css
/* CSS Document */

*{
margin: 0;
padding: 0;
font-family: 'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif;
/*font-family: 'Roboto', sans-serif; 
font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
*/
}

.relative { position: relative;}
.absolute { position: absolute;}
.center { max-width: 940px; margin: 0 auto; }
.left { float: left; }
.right { float: right; }

body {
font-family:Verdana, Geneva, sans-serif;
padding:0;
/* ADD SUBTLE GRADIENT FOR SCROLL DOWN TRANSITION */
}




/*HEADER ELEMENTS*/

#header { overflow: auto; margin-top: 10px; margin-bottom: 15px; }
#logo { display: block; float: left; padding-top: 5px; margin: 0; }

div#navlist {
text-align: left;
text-transform: uppercase;
font-size: .85em;
padding-top: 50px;
}
#navlist a { display: inline-block; padding-left:10px; }
#navlist a:link,#navlist a:visited { color:#666666; text-decoration:none; }
#navlist a:hover, #navlist #subactive { color:#000; text-decoration:underline; }

.navbar-wrapper {
position: absolute;
top: 0;
left: 0;
right: 0; 
z-index: 10;
margin-top: 20px;
margin-bottom: -90px;
}

#preview {
background-color: #333; 
background-image: url(../images/trial_bkg.gif);
background-size: cover;
background-repeat: no-repeat;
background-position: top left;
height: 350px;
margin-bottom: 50px;
overflow: hidden;
}

/* CUSTOMIZE THE CAROUSEL
    -------------------------------------------------- */

    /* Carousel base class */
    .carousel {
      margin-bottom: 60px;
    }

    .carousel .container {
      position: relative;
      z-index: 9;
    }

    .carousel-control {
      height: 80px;
      margin-top: 0;
      font-size: 120px;
      text-shadow: 0 1px 1px rgba(0,0,0,.4);
      background-color: transparent;
      border: 0;
      z-index: 10;
    }

    .carousel .item {
      height: 500px;
    }
    .carousel img {
      float: right;
    }

    .carousel-caption {
      background-color: transparent;
      position: static;
      max-width: 350px;
      padding: 0 20px;
      margin-top: 60px;  
    }
    .carousel-caption h1,
    .carousel-caption .lead {
      margin: 0;
      line-height: 1.25;
      color: #fff;
      text-shadow: 0 1px 1px rgba(0,0,0,.4);
    }
    .carousel-caption .btn {
      margin-top: 10px;
    }

/*#carouselnav {
margin: 0 auto;
width: 114px; Set JS to handle assigning the width for perfect fit 
clear: both;
}
#carouselnav a 
{
display: inline-block;
width: 18px;
height: 18px;
margin-right: 2px;
opacity: .5;
}

#carouselnav a.off { background: url(../images/glyph_off.gif) center center no-repeat; }
#carouselnav a.on, #carouselnav a:hover { background: url(../images/glyph_on.gif) center center no-repeat; }
*/

/*END HEADER ELEMENTS*/


#content {
text-align:left;
padding-top:20px;
font-size:12px;
line-height:18px;
position: relative;
height: 100%;
margin-bottom: 80px;
}

#content h1.cointro { /*JS to resize for online only*/
font-size: 4em;
margin-bottom: 10px;
line-height: 1em;
font-weight: 300;
text-shadow: 0 1px 1px rgba(0,0,0,.4);
}
#content p.cointro {
font-size: 2em;
line-height: 1.5em;
font-weight: 300;	
padding-bottom: 80px;
color: #303030;
}

#content h1.section_title {
font-style: italic;
font-size: 5em;
font-weight: 100;
/*text-decoration:underline;*/
margin-bottom: 80px;
width: 100%;
display: block;
text-align: center;
}
#content h1.project_section { 
height: 48px;
/*padding-top: 5px;
padding-left: 48px; 
*/
font-size: 3em;
text-align: center;
margin-bottom: 40px;
}
div#arrow_pointer { right: -135px; top: 40px; width: 80px; }

div.division {
min-height: 50px; 
padding: 0 5px;
overflow: hidden;
margin-bottom: 120px;
/*cursor: pointer;*/
}
div.division h2 { 
float: left;
text-align: center; 
font-weight: 400;
font-size: 2.0em;
display: block; 
/*margin-bottom: 10px;*/
height: 48px;
padding-top: 6px;
/*padding-left: 48px;*/
}
div.division p {  
font-size: 1.4em;
line-height: 1.4em;
font-weight: 300;
margin-bottom: 5px;
letter-spacing: .1em;
}
img.main {  
width: 100%;
display: block;
border: 2px solid #CCC;
border-radius: 4px;
/*border-bottom-left-radius: 0; 
border-bottom-right-radius: 0;*/
margin: 0 auto;
padding: 2px;
}
div.division div img { margin: 15px 0; width: 100%;}
a.divisionbtn { display: block; margin: 0 auto; }

div.extra { 
float: left;
margin: 60px auto 0 auto;
position: relative;

}
/*div.extra h3 { 
font-size: 1.1em;
color: #4b4b4b;
font-weight: 300;
text-transform: none;
line-height: 1.2em;
width: 80%;
margin: 0 auto;
display: block;
}*/
div.extra h4 {
color: #aeaeae;
font-size: 2.2em;
font-weight: 200;
margin-left: 4px;
line-height: 1em;
} 
div.extra div p { font-size: 1.2em; color: #aeaeae; padding: 0 4px;}
div.extra div { margin: 50px 0; }
div.extra div img { border-radius: 3px; }
div.extra div p.ctrmsg { 
width: 65%; 
text-align: center; 
margin: 40px auto 0 auto; 
font-size: 3em; 
font-weight: 100; 
color: #0067ad; 
}
div.extra div p.lftmsg { 
width: 65%; 
margin-top: 40px; 
font-size: 3em; 
font-weight: 100; 
color: #0067ad;
}
div.extra div p.rtmsg { 
width: 65%; 
text-align: right; 
margin: 40px auto 0 auto; 
font-size: 3em; 
font-weight: 100; 
color: #0067ad; 
}

div.hide { display: none; }
.hide a.btn-primary {margin-top: 20px; float: right; clear:x both;}



div.division .btn { margin-top: 20px; }


/*.project [class*="span"] {
  margin-left: 0;
}
*/

.noleftmargin { margin-left: 0; }
div.project {
height: auto; 
border-bottom: 1px solid #CCC;
padding-bottom: 30px;
margin-top: 30px;
overflow: hidden;
margin-left: 0;
}
div.project h2 {  
font-weight: 500;
font-size: 2.2em;
margin-bottom: 10px;
padding-top: 9px;
color: #5f5f5f;
text-transform: uppercase;
/*height: 35px; */
display: block;
line-height: 1.1em;
}
div.project p {  
font-size: 1.4em;
line-height: 1.4em;
font-weight: 300;
margin-bottom: 15px;
letter-spacing: .1em;
display: block;
clear: both;
}

.img-can { padding: 0 10px; min-height: 80px; overflow: hidden; margin: 30px auto 0 auto;}
.img-can a { margin: 0 5px 10px 0; display: inline-block; opacity: .6; }
.img-can img { 
height: 50px; 
border: 1px solid #CCC;
border-radius: 2px;
padding: 2px;
}

.loadmore {
border-bottom: none;
padding-bottom: 10px;
margin-bottom: 130px;
background: none;
}
.loadmore a.loadbtn { 
text-align: center; 
display: block; 
margin: 0 auto; 
width: 20%; 
margin-top: 30px; 
}


/*div.division h2#commercial, #content h1#commercial { background: url(../images/division_glyphs_14.gif) top left no-repeat; }
div.division h2#building, #content h1#building {  background: url(../images/division_glyphs_06.gif) top left no-repeat; }
div.division h2#waterfront, #content h1#waterfront { background: url(../images/division_glyphs_21.gif) top left no-repeat; }
div.division h2#pandi, #content h1#pandi { background: url(../images/division_glyphs_22.gif) top left no-repeat; }
div.division h2#heavy, #content h1#heavy { background: url(../images/division_glyphs_23.gif) top left no-repeat; }*/


.tilt:hover { cursor: pointer; }


.featured { padding-top: 45px; }
.featured h1 { 
font-size: 2.3em;
letter-spacing: .04em;
color: white;
text-shadow:
-1px -1px 0 #000,  
 1px -1px 0 #000,
-1px 1px 0 #000,
 1px 1px 0 #000;
}
h1 { font-size:18px; }
h2 { font-size:14px; }
h3 {
font-size:10px;
letter-spacing: 2px;
color:#0099cc;
}
h4 {
font-size:18px;
margin:0;
padding: 0;
}
h1,h2,h3 {
text-transform:uppercase;
margin:0;
padding: 0;
}
.division h1 {font-weight: 300; }

#footer {
background-color:#282828;
padding: 20px 0;
}
#footer div {
 /* set width with JS */
overflow: auto;
}
#footer_logo { 
width: 72px;
height: 47px;
margin: 0;
padding-top: 10px;
float: left;
}
#footer p {
color: #4c95b6;
text-align: left;	
font-size: .8em;
padding-left: 20px;
padding-top: 5px;
clear: none;
float: left;
line-height: 1.2em;
}


.noleftmargin { margin-left: 0 } 
/* RESPONSIVE VIEWS FOR BOOTSTRAP */

/* Large desktop */
@media (min-width: 1200px) { ... }
 
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) { ... }
 
/* Landscape phone to portrait tablet */
@media (max-width: 767px) { 
div#navlist { clear: left; }
}
 
/* Landscape phones and down */
@media (max-width: 480px) { 

}

